--- a/socal0707.html
+++ b/socal0707.html
@@ -66,7 +66,7 @@
                      
                 </td>
                 <td style="text-align:right;">
-                  <img src="https://2095a08169.imgdist.com/pub/bfra/qmhdakdj/mq3/rmb/pnk/socalmain.png"
+                  <img src="https://github.com/pingjueuna/socalletter/blob/main/Baltimore-Tech-Meetup-Figma-Session-2024-scaled.jpeg"
                        alt="AI 교육 이미지" style="width:160px; border-radius:6px;">
                 </td>
               </tr>
