--- a/socal0707.html
+++ b/socal0707.html
@@ -9,7 +9,7 @@
       <table style="width:100%;">
         <tr>
           <td style="text-align:left;">
-            <img src="http://collab.lge.com/main/download/attachments/3197245104/socallogo.png?api=v2"
+            <img src="https://github.com/pingjueuna/socalletter/blob/main/socallogo.png"
                  alt="SWCollege 로고" style="height:60px;">
           </td>
           <td style="text-align:right; font-size:14px; color:#2c4d90;">
