--- a/socal0707.html
+++ b/socal0707.html
@@ -28,7 +28,7 @@
           <td style="padding:30px; text-align:center;">
             <h2 style="margin-top:0; color:#2c4d90;"><strong> AI 학습에 절대, 소홀해선 안되는 이유 !</strong></h2>
             <p style="font-size:14px; color:#555;">비코 부자 예외 ₿💸</p>
-            <img src="http://collab.lge.com/main/download/attachments/3197245104/socaltoon.png?api=v2"
+            <img src="https://github.com/pingjueuna/socalletter/blob/main/socaltoon.png"
                  alt="러닝 캐릭터"
                  style="width:100%; max-width:800px; margin-top:10px; border-radius:6px;">
             <p style="font-size:12px; color:#777;"><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3168618014" target="_blank" style="display:inline-block; background:#dee6fc; color:#2c4d90; padding:6px 12px; border-radius:4px; font-size:13px; text-decoration:none;">🐕 쏘칼툰 몰아보기관 OPEN!</a> </p>
