--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <table style="width:100%;">
         <tr>
           <td style="text-align:left;">
-            <img src="https://github.com/pingjueuna/socalletter/blob/main/socallogo.png"
+            <img src="socallogo.png"
                  alt="SWCollege 로고" style="height:60px;">
           </td>
           <td style="text-align:right; font-size:14px; color:#2c4d90;">
