--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <td style="padding:30px; text-align:center;">
             <h2 style="margin-top:0; color:#2c4d90;"><strong> AI 학습에 절대, 소홀해선 안되는 이유 !</strong></h2>
             <p style="font-size:14px; color:#555;">비코 부자 예외 ₿💸</p>
-            <img src="https://github.com/pingjueuna/socalletter/blob/main/socaltoon.png"
+            <img src="socaltoon.png"
                  alt="러닝 캐릭터"
                  style="width:100%; max-width:800px; margin-top:10px; border-radius:6px;">
             <p style="font-size:12px; color:#777;"><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3168618014" target="_blank" style="display:inline-block; background:#dee6fc; color:#2c4d90; padding:6px 12px; border-radius:4px; font-size:13px; text-decoration:none;">🐕 쏘칼툰 몰아보기관 OPEN!</a> </p>
@@ -38,7 +38,7 @@
     </td>
   </tr>
 
-  <!-- 💡 AI 교육 -->
+  <!-- 💡 Coursework 안내 -->
   <tr>
     <td style="padding:0 20px;">
       <table style="width:100%; background:#fdfdfd; border-radius:10px; box-shadow:0 4px 8px rgba(0,0,0,0.05); margin-bottom:30px;">
@@ -66,7 +66,7 @@
                      
                 </td>
                 <td style="text-align:right;">
-                  <img src="https://github.com/pingjueuna/socalletter/blob/main/Baltimore-Tech-Meetup-Figma-Session-2024-scaled.jpeg"
+                  <img src="Baltimore-Tech-Meetup-Figma-Session-2024-scaled.jpeg"
                        alt="AI 교육 이미지" style="width:160px; border-radius:6px;">
                 </td>
               </tr>
