--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <table style="width:100%;">
               <tr>
                 <td style="vertical-align:top;">
-                  <h3 style="margin-top:0; color:#2c4d90; font-size:18px;">💡 2분기 학습 마무리 시작~~~~~하겠습니다! feat. 3분기 신청 기간<p style="font-size:15px; color:#7851A9;"> 쏘칼, VIP 프로그램으로 학습자들에게 특별한 기회 제공</h3>
+                  <h3 style="margin-top:0; color:#2c4d90; font-size:18px;">💡 2분기 학습 마무리~~~~~하겠습니다!  feat. 3분기 신청 기간<p style="font-size:15px; color:#7851A9;"> 쏘칼, VIP 프로그램으로 학습자들에게 특별한 기회 제공</h3>
                   <p style="line-height:1.6; font-size:14px; color:#444;">
                     2023년 2분기를 마무리하며, 쏘칼이 열심히 공부한 학습자들을 위한 VIP 프로그램을 선보입니다. 
 이 프로그램은 쏘칼 VIP를 위한 특강과 라운지에서의 체험을 포함하여, 학습자들이 더욱 깊이 있는 경험을 할 수 있도록 기획되었습니다.
