--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+
+
+
+
+
 <!-- 전체 뉴스레터 HTML -->
 <!DOCTYPE html>
 <html lang="ko">
@@ -53,27 +58,32 @@
   <tr>
     <td class="section">
       <table style="width:100%; text-align:center;">
-        <tr><td style="padding:20px 0;">
-          <img src="https://pingjueuna.github.io/socalletter/socallogo.png" alt="SWCollege 로고" style="height:60px; float:left;">
-          <p style="margin: 8px 0; color:#2c4d90; float:right;"><strong>VOL.20 | 2025년 7월호</strong></p>
-        </td></tr>
-        <tr><td style="text-align:center; padding-top:20px;">
-          <h2 style="color:#2c4d90;"><strong>AI도 배울 수 있을까요? 이 따뜻함을 🧡</strong></h2>
-          <p style="font-size:14px; color:#555;">부디 이번 폭우로 인한 피해가 최소화되고 모든 것이 무사히 마무리 되길 바랍니다🧡</p>
-          <img src="https://pingjueuna.github.io/socalletter/socaltoon20.png" alt="쏘칼툰 이미지" style="width:100%; max-width:800px; border-radius:6px;">
-          <p style="font-size:13px; color:#2c4d90; margin-top:6px;">
-            <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3168618014" target="_blank" style="color:#2c4d90; background:#edf4ff; padding:6px 12px; border-radius:4px; text-decoration:none;">🐕 쏘칼툰 몰아보기관 OPEN!</a>
-          </p>
-        </td></tr>
+        <tr>
+          <td style="padding:20px 0;">
+            <img src="https://pingjueuna.github.io/socalletter/socallogo.png" alt="SWCollege 로고" style="height:60px; float:left;">
+            <p style="margin: 8px 0; color:#2c4d90; float:right;"><strong>VOL.20 | 2025년 7월호</strong></p>
+          </td>
+        </tr>
+        <tr>
+          <td style="text-align:center; padding-top:20px;">
+            <h2 style="color:#2c4d90; margin-bottom:6px;"><strong>AI도 배울 수 있을까요? 이 따뜻함을 🧡</strong></h2>
+            <p style="font-size:14px; color:#555; margin-bottom:16px;">부디 이번 폭우로 인한 피해가 최소화되고 모든 것이 무사히 마무리 되길 바랍니다🧡</p>
+            <img src="https://pingjueuna.github.io/socalletter/socaltoon20.png" alt="쏘칼툰 이미지" style="width:100%; max-width:800px; border-radius:6px;">
+            <p style="font-size:13px; color:#2c4d90; margin-top:6px;">
+              <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3168618014" target="_blank" style="color:#2c4d90; background:#edf4ff; padding:6px 12px; border-radius:4px; text-decoration:none; display:inline-block;">🐕 쏘칼툰 몰아보기관 OPEN!</a>
+            </p>
+          </td>
+        </tr>
       </table>
     </td>
   </tr>
 </table>
 
-<!-- 라코 섹션 -->
-<table style="background:#e6f4ea;">
+
+  <!-- 라코 섹션 -->
+<table style="width:100%; background:#e6f4ea; max-width:800px; margin:0 0 20px 0;">
   <tr>
-    <td class="section">
+    <td class="section" style="padding: 0 0;">
       <table style="width:100%; border-left:5px solid #34a853; text-align:left;">
         <tr>
           <td class="card">
@@ -85,7 +95,7 @@
               <li>🤖 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3216717211" target="_blank" style="color:#1e7045; text-decoration:none; font-weight:500;">내부 데이터 활용 RAG 기반 챗봇 맛보기!</a></li>
               <li>🎧 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3220385220" target="_blank" style="color:#1e7045; text-decoration:none; font-weight:500;">바이브 코딩? AI에 몸을 맡겨.. 코드를 완성해보자</a></li>
             </ul>
-            <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3223806164" target="_blank" class="btn" style="display:inline-block; background:#bfe3d2; color:#1e7045; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">🌱 "Brand 라코" 바로가기</a>
+            <br><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3223806164" target="_blank" class="btn" style="display:inline-block; background:#bfe3d2; color:#1e7045; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">🌱 "Brand 라코" 바로가기</a>
           </td>
         </tr>
       </table>
@@ -93,11 +103,127 @@
   </tr>
 </table>
 
-<!-- 신규 코스워크 섹션 -->
-<!-- 여기에 신규 코스워크 섹션 전체 HTML 삽입 -->
 
-<!-- 이하 섹션은 유지됨 -->
-<!-- 러크TV, Fast Learner 등 기존 코드 계속 이어짐 -->
+
+  <!-- 신규 코스워크 섹션 -->
+<table style="width:100%; background:#e3f2fd; max-width:800px; margin:0 0 20px 0;">
+  <tr>
+    <td class="section" style="padding: 0 0;">
+      <table style="width:100%; border-left:5px solid #42a5f5; text-align:left;">
+        <tr>
+          <td class="card">
+            <h3 style="color:#1565c0; font-weight:bold;">🔥NEW🔥 3분기 신규 코스워크 출범! 어머! 이건 꼭 들어야 해</h3>
+            <p style="font-size:13px; color:#333;">AI, 임베디드, 생성형 AI Agent, AI Technical Writing 코스까지 한 눈에!</p>
+            <ul style="font-size:13px; line-height:1.8; list-style:none; padding-left:0;">
+              <li>📊 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3213216416" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">초보자도 쉽게 따라하는 딥러닝 개론</a></li>
+              <li>🤖 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3213216399" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">초보자도 쉽게 따라하는 머신러닝 개론</a></li>
+              <li>🛠️ <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3220373836" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">개발 생산성을 확! 끌어올리는 AI 프로그래밍</a></li>
+              <li>📝 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3216723961" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">업무 효율을 확! 끌어올리는 AI Technical Writing</a></li>
+              <li>🎯 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3217483360" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">업무 효율을 확! 끌어올리는 ChatGPT 프롬프트 마스터 클래스</a></li>
+              <li>👩‍💼 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3216721524" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">업무 효율을 확! 끌어올리는 생성형AI Agent 마스터 코스</a></li>
+              <li>🔧 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3216723984" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">실제 업무에 바로 쓸 수 있는 임베디드 기초</a></li>
+              <li>💻 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3216724161" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">실제 업무에 바로 쓸 수 있는 Linux-Yocto, 쉽게 다루기</a></li>
+            </ul>             <br><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2878865316" target="_blank" class="btn" style="display:inline-block; background:#bbdefb; color:#1565c0; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">🚀 3분기 코스워크 신청</a>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>  
+
+
+
+<!-- 밋업 섹션 -->
+<table style="width:100%; background:#fce4ec; max-width:800px; margin:0 0 20px 0;">
+  <tr>
+    <td class="section" style="padding: 0 0;">
+      <table style="width:100%; border-left:5px solid #ec407a; text-align:left;">
+        <tr>
+          <td class="card" style="vertical-align:top; width:60%;">
+            <h3 style="color:#c2185b;">🎀 우수 학습자들이 한 자리에! 밋업 현장 공개</h3>
+            <p style="font-size:13px;">쏘칼 밋업 현장 속 찐후기, 지금 함께 느껴보세요!🙌 다음엔 여러분도 함께 하실 거죠?</p>
+            <p style="font-size:13px; color:#444;">밋업 참가자들의 소중한 의견도 공유되었어요. 다양한 강의와 자율적인 교류 시간, AI 프롬프트와 프로젝트 제안까지! 앞으로 더 자주 만나요 :)</p>             <br><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3223799703" target="_blank" class="btn" style="display:inline-block; background:#f8bbd0; color:#4a148c; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">📸 밋업 스케치 보기</a>            
+          </td>
+          <td style="text-align:right; width:40%;">
+            <img src="https://github.com/pingjueuna/socalletter/socalmeetup.png" alt="밋업 이미지" style="max-width:100%; height:auto; border-radius:6px;">
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>  
+
+<!-- 러크TV 섹션 -->
+<table style="width:100%; background:#fff3e0; max-width:800px; margin:0 0 20px 0;">
+  <tr>
+    <td class="section" style="padding: 0 0;">
+      <table style="width:100%; border-left:5px solid #ff9800; text-align:left;">
+        <tr>
+          <td class="card">
+            <h3 style="color:#ef6c00;">🎬 러크TV 신규 콘텐츠 "더 재밌게~돌아온 알쓸개잡💕"</h3>
+            <ul style="font-size:13px; line-height:1.8;">
+              <li>🧠 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000001" target="_blank" style="color:#ef6c00;">LLM과 Prompt Engineering의 작동 원리 이해하기 👈 CSO 노건호</a></li>
+              <li>📝 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000002" target="_blank" style="color:#ef6c00;">ChatEXAONE Release Notes - 2025년 7월 16일 업데이트 👈 CSO 정의석</a></li>
+              <li>📚 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000003" target="_blank" style="color:#ef6c00;">ChatEXAONE Manual Ch1~Ch4 👈 CSO 정의석</a></li>
+              <li>🧩 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000004" target="_blank" style="color:#ef6c00;">ChatGPT 자동화 AGENT 나오다!! 👈 CSO 정의석</a></li>
+              <li>🔐 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000005" target="_blank" style="color:#ef6c00;">System Security 이야기 👈 VS 유연희</a></li>
+              <li>🎙️ <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000006" target="_blank" style="color:#ef6c00;">[팟캐스트] System Security 👈 VS 유연희</a></li>
+              <li>👨‍💼 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000007" target="_blank" style="color:#ef6c00;">Agent AI - AI가 이제 팀장이 된다고? 👈 오형신</a></li>
+            </ul> <br><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2193929410" target="_blank" class="btn" style="display:inline-block; background:#ffcc80; color:#ef6c00; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">📺 전체 콘텐츠 보기</a> 
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>  
+
+<!-- Fast Learner 섹션 -->
+<table style="width:100%; background:#f3e5f5; max-width:800px; margin:0 0 20px 0;">
+  <tr>
+    <td class="section" style="padding: 0 0;">
+      <table style="width:100%; border-left:5px solid #9c27b0; text-align:left;">
+        <tr>
+          <td class="card">
+            <h3 style="color:#7b1fa2;">🏆 Fast Learner 랭킹 1위! VS사업본부 최.진.석! </h3>
+            <p style="font-size:13px;">  2분기 종료 10일 전,Fast Learner들을 확인해보세요!</p>
+            <br><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2966064616" target="_blank" class="btn" style="display:inline-block; background:#e1bee7; color:#7b1fa2; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">🏅 Fast Learner 보기</a>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>  <!-- 이벤트 섹션 -->
+<table style="width:100%; background:#fffde7; max-width:800px; margin:0 0 20px 0;">
+  <tr>
+    <td class="section" style="padding: 0 0;">
+      <table style="width:100%; border-left:5px solid #fbc02d; text-align:left;">
+        <tr>
+          <td class="card">
+            <h3 style="color:#f9a825;">🎁 7월 쏘칼 이벤트</h3>
+            <p style="font-size:13px;">“이건 무조건 코스워크!” 제안하면 경품까지!</p>
+            <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3199994649" target="_blank" class="btn" style="display:inline-block; background:#fbc02d; color:white; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">🎁 이벤트 참여하기</a>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>  
+
+
+<!-- 푸터 섹션 -->
+<table style="width:100%; background:#eceff1; max-width:800px; margin:0 0 20px 0;">
+  <tr>
+    <td class="section" style="padding: 10px 16px;">
+      <p style="font-size:12px; color:#555; margin:0; align=center">
+        문의 : 교육서비스센터 유지혜 선임 ｜ 발행 : SW역량강화팀 ｜ 제작 : 이은아, 진명숙, 이호정, 유지혜, 장서련
+      </p>
+    </td>
+  </tr>
+</table>  
 
 </body>
 </html>
+
+
+
+
