--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <p style="font-size:13px; color:#444;">밋업 참가자들의 소중한 의견도 공유되었어요. 다양한 강의와 자율적인 교류 시간, AI 프롬프트와 프로젝트 제안까지! 앞으로 더 자주 만나요 :)</p>             <br><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3223799703" target="_blank" class="btn" style="display:inline-block; background:#f8bbd0; color:#4a148c; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">📸 밋업 스케치 보기</a>            
           </td>
           <td style="text-align:right; width:40%;">
-            <img src="https://github.com/pingjueuna/socalletter/socalmeetup.png" alt="밋업 이미지" style="max-width:100%; height:auto; border-radius:6px;">
+            <img src="https://pingjueuna.github.io/socalletter/socalmeetup.png" alt="밋업 이미지" style="max-width:100%; height:auto; border-radius:6px;">
           </td>
         </tr>
       </table>
