--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 
   <!-- 신규 코스워크 섹션 -->
-<table style="width:100%; background:#e3f2fd; max-width:800px; margin:0 0 20px 0;">
+<table style="width:100%; background:#e3f2fd; max-width:1000px; margin:auto;">
   <tr>
     <td class="section" style="padding: 0 0;">
       <table style="width:100%; border-left:5px solid #42a5f5; text-align:left;">
@@ -130,7 +130,7 @@
 
 
 <!-- 밋업 섹션 -->
-<table style="width:100%; background:#fce4ec; max-width:800px; margin:0 0 20px 0;">
+<table style="width:100%; background:#fce4ec; max-width:1000px; margin:auto;">
   <tr>
     <td class="section" style="padding: 0 0;">
       <table style="width:100%; border-left:5px solid #ec407a; text-align:left;">
@@ -150,7 +150,7 @@
 </table>  
 
 <!-- 러크TV 섹션 -->
-<table style="width:100%; background:#fff3e0; max-width:800px; margin:0 0 20px 0;">
+<table style="width:100%; background:#fff3e0; max-width:1000px; margin:auto;">
   <tr>
     <td class="section" style="padding: 0 0;">
       <table style="width:100%; border-left:5px solid #ff9800; text-align:left;">
@@ -174,7 +174,7 @@
 </table>  
 
 <!-- Fast Learner 섹션 -->
-<table style="width:100%; background:#f3e5f5; max-width:800px; margin:0 0 20px 0;">
+<table style="width:100%; background:#f3e5f5; max-width:1000px; margin:auto;">
   <tr>
     <td class="section" style="padding: 0 0;">
       <table style="width:100%; border-left:5px solid #9c27b0; text-align:left;">
@@ -189,7 +189,7 @@
     </td>
   </tr>
 </table>  <!-- 이벤트 섹션 -->
-<table style="width:100%; background:#fffde7; max-width:800px; margin:0 0 20px 0;">
+<table style="width:100%; background:#fffde7; max-width:1000px; margin:auto;">
   <tr>
     <td class="section" style="padding: 0 0;">
       <table style="width:100%; border-left:5px solid #fbc02d; text-align:left;">
@@ -207,7 +207,7 @@
 
 
 <!-- 푸터 섹션 -->
-<table style="width:100%; background:#eceff1; max-width:800px; margin:0 0 20px 0;">
+<table style="width:100%; background:#eceff1; max-width:1000px; margin:auto;">
   <tr>
     <td class="section" style="padding: 10px 16px;">
       <p style="font-size:12px; color:#555; margin:0; align=center">
