--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
   </tr>
 </table>
 
-
   <!-- 라코 섹션 -->
 <table style="width:100%; background:#e6f4ea; max-width:1000px; margin:auto;">
   <tr>
@@ -98,8 +97,6 @@
     </td>
   </tr>
 </table>
-
-
 
   <!-- 신규 코스워크 섹션 -->
 <table style="width:100%; background:#e3f2fd; max-width:1000px; margin:auto;">
@@ -126,8 +123,6 @@
     </td>
   </tr>
 </table>  
-
-
 
 <!-- 밋업 섹션 -->
 <table style="width:100%; background:#fce4ec; max-width:1000px; margin:auto;">
@@ -188,7 +183,9 @@
       </table>
     </td>
   </tr>
-</table>  <!-- 이벤트 섹션 -->
+</table> 
+  
+  <!-- 이벤트 섹션 -->
 <table style="width:100%; background:#fffde7; max-width:1000px; margin:auto;">
   <tr>
     <td class="section" style="padding: 0 0;">
@@ -204,7 +201,6 @@
     </td>
   </tr>
 </table>  
-
 
 <!-- 푸터 섹션 -->
 <table style="width:100%; background:#eceff1; max-width:1000px; margin:auto;">
