--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
     </td>
   </tr>
 </table> 
-  
+
+  <dir></dir>
   <!-- 이벤트 섹션 -->
 <table style="width:100%; background:#fffde7; max-width:1000px; margin:auto;">
   <tr>
