--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
           <td class="card">
             <h3 style="color:#ef6c00;">🎬 러크TV 신규 콘텐츠 "더 재밌게~돌아온 알쓸개잡💕"</h3>
             <ul style="font-size:13px; line-height:1.8;">
-              <li>🧠 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000001" target="_blank" style="color:#ef6c00;">LLM과 Prompt Engineering의 작동 원리 이해하기 👈 CSO 노건호</a></li>
-              <li>📝 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000002" target="_blank" style="color:#ef6c00;">ChatEXAONE Release Notes - 2025년 7월 16일 업데이트 👈 CSO 정의석</a></li>
-              <li>📚 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000003" target="_blank" style="color:#ef6c00;">ChatEXAONE Manual Ch1~Ch4 👈 CSO 정의석</a></li>
-              <li>🧩 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000004" target="_blank" style="color:#ef6c00;">ChatGPT 자동화 AGENT 나오다!! 👈 CSO 정의석</a></li>
-              <li>🔐 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000005" target="_blank" style="color:#ef6c00;">System Security 이야기 👈 VS 유연희</a></li>
-              <li>🎙️ <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000006" target="_blank" style="color:#ef6c00;">[팟캐스트] System Security 👈 VS 유연희</a></li>
-              <li>👨‍💼 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3230000007" target="_blank" style="color:#ef6c00;">Agent AI - AI가 이제 팀장이 된다고? 👈 오형신</a></li>
+              <li>🧠 <a href="http://collab.lge.com/main/x/8Gymvw" target="_blank" style="color:#ef6c00;">LLM과 Prompt Engineering의 작동 원리 이해하기 👈 CSO 노건호</a></li>
+              <li>📝 <a href="http://collab.lge.com/main/x/jtnGvw" target="_blank" style="color:#ef6c00;">ChatEXAONE Release Notes - 2025년 7월 16일 업데이트 👈 CSO 정의석</a></li>
+              <li>📚 <a href="http://collab.lge.com/main/x/697Gvw" target="_blank" style="color:#ef6c00;">ChatEXAONE Manual Ch1~Ch4 👈 CSO 정의석</a></li>
+              <li>🧩 <a href="http://collab.lge.com/main/x/_RTzvw" target="_blank" style="color:#ef6c00;">ChatGPT 자동화 AGENT 나오다!! 👈 CSO 정의석</a></li>
+              <li>🔐 <a href="https://youtu.be/bwiXpSrhvOI" target="_blank" style="color:#ef6c00;">System Security 이야기 👈 VS 유연희</a></li>
+              <li>🎙️ <a href="https://youtu.be/qeqG0BU1sW4" target="_blank" style="color:#ef6c00;">[팟캐스트] System Security 👈 VS 유연희</a></li>
+              <li>👨‍💼 <a href="https://youtu.be/hncs5YLDTHU" target="_blank" style="color:#ef6c00;">Agent AI - AI가 이제 팀장이 된다고? 👈 오형신</a></li>
             </ul> <br><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2193929410" target="_blank" class="btn" style="display:inline-block; background:#ffcc80; color:#ef6c00; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">📺 전체 콘텐츠 보기</a> 
           </td>
         </tr>
