--- a/index.html
+++ b/index.html
@@ -1,222 +1,53 @@
 
-<!-- 전체 뉴스레터 HTML -->
+
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>SW College Letter VOL.20</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #fff;
-      color: #333;
-    }
-    table {
-      width: 100%;
-      max-width: 1000px;
-      margin: auto;
-      border-collapse: collapse;
-    }
-    h2, h3 {
-      margin: 0;
-    }
-    h3 {
-      font-size: 18px;
-    }
-    p, ul {
-      margin: 8px 0;
-      font-size: 14px;
-    }
-    a {
-      text-decoration: none;
-    }
-    .section {
-      padding: 0 20px;
-    }
-    .card {
-      padding: 16px;
-    }
-    .btn {
-      display: inline-block;
-      padding: 6px 14px;
-      border-radius: 4px;
-      font-size: 13px;
-      text-decoration: none;
-    }
-  </style>
+  <title>쏘칼리버 수강신청</title>
 </head>
-<body>
+<body style="font-family: 'Noto Sans KR', sans-serif; background-color: #fff7f0; padding: 30px;">
 
-<!-- 로고 및 쏘칼툰 섹션 -->
 <table>
   <tr>
-    <td class="section">
-      <table style="width:100%; text-align:center;">
-        <tr>
-          <td style="padding:20px 0;">
-            <img src="https://pingjueuna.github.io/socalletter/socallogo.png" alt="SWCollege 로고" style="height:60px; float:left;">
-            <p style="margin: 8px 0; color:#2c4d90; float:right;"><strong>VOL.20 | 2025년 7월호</strong></p>
-          </td>
-        </tr>
-        <tr>
-          <td style="text-align:center; padding-top:20px;">
-            <h2 style="color:#2c4d90; margin-bottom:6px;"><strong>AI도 배울 수 있을까요? 이 따뜻함을 🧡</strong></h2>
-            <p style="font-size:14px; color:#555; margin-bottom:16px;">부디 이번 폭우로 인한 피해가 최소화되고 모든 것이 무사히 마무리 되길 바랍니다🧡</p>
-            <img src="https://pingjueuna.github.io/socalletter/socaltoon20.png" alt="쏘칼툰 이미지" style="width:100%; max-width:800px; border-radius:6px;">
-            <p style="font-size:13px; color:#2c4d90; margin-top:6px;">
-              <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3168618014" target="_blank" style="color:#2c4d90; background:#edf4ff; padding:6px 12px; border-radius:4px; text-decoration:none; display:inline-block;">🐕 쏘칼툰 몰아보기관 OPEN!</a>
-            </p>
-          </td>
-        </tr>
-      </table>
+    <!-- 왼쪽 이미지 -->
+    <td style="vertical-align: top; padding-right: 20px;">
+      <img src="https://pingjueuna.github.io/socalletter/socalliver.png" width="300" alt="쏘칼리버 수강신청 포스터">
+    </td>
+
+    <!-- 오른쪽 텍스트 박스 -->
+    <td style="vertical-align: top; background-color: #f8f1e5; padding: 24px; border-radius: 14px; color: #222; max-width: 600px;">
+      <h3 style="margin-top: 0;">🟡 신청했느냐, 안 했느냐... <span style="color:#9c4221;">그것이 오히려, <strong>기회로다.</strong></span></h3>
+
+      <p style="margin-bottom: 12px;">“후배가 슬슬 나를 앞지르겠단 말이지...<br>
+      <span style="color:#b85c38;">그날 난 조용히 신청 버튼을 눌렀다.”</span></p>
+
+      <p style="margin-bottom: 16px;">“회의 중에 ‘이건 어제 들은 내용인데?’<br>
+      <span style="color:#b85c38;">이 한마디로 분위기 뒤집고 싶다면 지금이야.”</span></p>
+
+      <h4 style="margin-top: 0;">📌 이런 사람, 지금 바로 신청하세요! 코스워크 정보는 링크 클릭!</h4>
+      <ul style="margin-bottom: 20px; padding-left: 20px;">
+        <li>🟠 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2878865316" target="_blank">새 코스워크, 7개 궁금해?</a> → 그럼 신청해!</li>
+        <li>🟠 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2878865316" target="_blank">기존 계정 아깝지?</a> → 유지하려면 신청해서 다시 공부하자!</li>
+        <li>🟠 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3223806164" target="_blank">라이트 코스워크만?</a> → 가벼워도 무지는 벗어나게~ 신청 대상이지!</li>
+      </ul>
+
+      <p style="margin-bottom: 16px;">📚 <strong>신청 방법:</strong> 러닝시스템 → 코스워크 이름 검색 → 수강 신청</p>
+
+      <p style="color:#dc2626; font-weight:bold; margin-bottom: 16px;">❗ 8월 7일(목) 이후엔 신청도 안 되고, 기록도 날아갈 수 있어요.</p>
+
+      <p style="margin-bottom: 0;">“<em>미룬 사람은 남고, 신청한 사람은 성장한다.</em>”<br>
+      지금 결정이 2025년 하반기를 가릅니다.<br>
+      쏘칼리버는 이미 신청 완료 🙈</p>
+
+      
+      
     </td>
   </tr>
 </table>
-
-  <!-- 라코 섹션 -->
-<table style="width:100%; background:#e6f4ea; max-width:1000px; margin:auto;">
-  <tr>
-    <td class="section" style="padding: 0 0;">
-      <table style="width:100%; border-left:5px solid #34a853; text-align:left;">
-        <tr>
-          <td class="card">
-            <h3 style="color:#1e7045; font-weight:bold;">🦅 라이트 코스워크 "라코" 런칭! 가볍게 시작하세요</h3>
-            <p style="font-size:13px; color:#333;">심화 학습은 부담스러운 분들을 위한 라이트한 학습 콘텐츠 🎈</p>
-            <ul style="font-size:13px; line-height:1.8; list-style:none; padding-left:0;">
-              <li>⏱️ <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3213211776" target="_blank" style="color:#1e7045; text-decoration:none; font-weight:500;">가볍게! 시작하는 시계열 분석 기초</a></li>
-              <li>💬 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3216723228" target="_blank" style="color:#1e7045; text-decoration:none; font-weight:500;">가볍게! 시작하는 프롬프트 엔지니어링</a></li>
-              <li>🤖 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3216717211" target="_blank" style="color:#1e7045; text-decoration:none; font-weight:500;">내부 데이터 활용 RAG 기반 챗봇 맛보기!</a></li>
-              <li>🎧 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3220385220" target="_blank" style="color:#1e7045; text-decoration:none; font-weight:500;">바이브 코딩? AI에 몸을 맡겨.. 코드를 완성해보자</a></li>
-            </ul>
-            <br><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3223806164" target="_blank" class="btn" style="display:inline-block; background:#bfe3d2; color:#1e7045; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">🌱 "Brand 라코" 바로가기</a>
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
-
-  <!-- 신규 코스워크 섹션 -->
-<table style="width:100%; background:#e3f2fd; max-width:1000px; margin:auto;">
-  <tr>
-    <td class="section" style="padding: 0 0;">
-      <table style="width:100%; border-left:5px solid #42a5f5; text-align:left;">
-        <tr>
-          <td class="card">
-            <h3 style="color:#1565c0; font-weight:bold;">🔥NEW🔥 3분기 신규 코스워크 출범! 어머! 이건 꼭 들어야 해</h3>
-            <p style="font-size:13px; color:#333;">AI, 임베디드, 생성형 AI Agent, AI Technical Writing 코스까지 한 눈에!</p>
-            <ul style="font-size:13px; line-height:1.8; list-style:none; padding-left:0;">
-              <li>📊 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3213216416" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">초보자도 쉽게 따라하는 딥러닝 개론</a></li>
-              <li>🤖 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3213216399" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">초보자도 쉽게 따라하는 머신러닝 개론</a></li>
-              <li>🛠️ <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3220373836" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">개발 생산성을 확! 끌어올리는 AI 프로그래밍</a></li>
-              <li>📝 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3216723961" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">업무 효율을 확! 끌어올리는 AI Technical Writing</a></li>
-              <li>🎯 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3217483360" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">업무 효율을 확! 끌어올리는 ChatGPT 프롬프트 마스터 클래스</a></li>
-              <li>👩‍💼 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3216721524" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">업무 효율을 확! 끌어올리는 생성형AI Agent 마스터 코스</a></li>
-              <li>🔧 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3216723984" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">실제 업무에 바로 쓸 수 있는 임베디드 기초</a></li>
-              <li>💻 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3216724161" target="_blank" style="color:#1565c0; text-decoration:none; font-weight:500;">실제 업무에 바로 쓸 수 있는 Linux-Yocto, 쉽게 다루기</a></li>
-            </ul>             <br><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2878865316" target="_blank" class="btn" style="display:inline-block; background:#bbdefb; color:#1565c0; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">🚀 3분기 코스워크 신청</a>
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>  
-
-<!-- 밋업 섹션 -->
-<table style="width:100%; background:#fce4ec; max-width:1000px; margin:auto;">
-  <tr>
-    <td class="section" style="padding: 0 0;">
-      <table style="width:100%; border-left:5px solid #ec407a; text-align:left;">
-        <tr>
-          <td class="card" style="vertical-align:top; width:60%;">
-            <h3 style="color:#c2185b;">🎀 우수 학습자들이 한 자리에! 밋업 현장 공개</h3>
-            <p style="font-size:13px;">쏘칼 밋업 현장 속 찐후기, 지금 함께 느껴보세요!🙌 다음엔 여러분도 함께 하실 거죠?</p>
-            <p style="font-size:13px; color:#444;">밋업 참가자들의 소중한 의견도 공유되었어요. 다양한 강의와 자율적인 교류 시간, AI 프롬프트와 프로젝트 제안까지! 앞으로 더 자주 만나요 :)</p>             <br><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3223799703" target="_blank" class="btn" style="display:inline-block; background:#f8bbd0; color:#4a148c; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">📸 밋업 스케치 보기</a>            
-          </td>
-          <td style="text-align:right; width:40%;">
-            <img src="https://pingjueuna.github.io/socalletter/socalmeetup.png" alt="밋업 이미지" style="max-width:100%; height:auto; border-radius:6px;">
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>  
-
-<!-- 러크TV 섹션 -->
-<table style="width:100%; background:#fff3e0; max-width:1000px; margin:auto;">
-  <tr>
-    <td class="section" style="padding: 0 0;">
-      <table style="width:100%; border-left:5px solid #ff9800; text-align:left;">
-        <tr>
-          <td class="card">
-            <h3 style="color:#ef6c00;">🎬 러크TV 신규 콘텐츠 "더 재밌게~돌아온 알쓸개잡💕"</h3>
-            <ul style="font-size:13px; line-height:1.8;">
-              <li>🧠 <a href="http://collab.lge.com/main/x/8Gymvw" target="_blank" style="color:#ef6c00;">LLM과 Prompt Engineering의 작동 원리 이해하기 👈 CSO 노건호</a></li>
-              <li>📝 <a href="http://collab.lge.com/main/x/jtnGvw" target="_blank" style="color:#ef6c00;">ChatEXAONE Release Notes - 2025년 7월 16일 업데이트 👈 CSO 정의석</a></li>
-              <li>📚 <a href="http://collab.lge.com/main/x/697Gvw" target="_blank" style="color:#ef6c00;">ChatEXAONE Manual Ch1~Ch4 👈 CSO 정의석</a></li>
-              <li>🧩 <a href="http://collab.lge.com/main/x/_RTzvw" target="_blank" style="color:#ef6c00;">ChatGPT 자동화 AGENT 나오다!! 👈 CSO 정의석</a></li>
-              <li>🔐 <a href="https://youtu.be/bwiXpSrhvOI" target="_blank" style="color:#ef6c00;">System Security 이야기 👈 VS 유연희</a></li>
-              <li>🎙️ <a href="https://youtu.be/qeqG0BU1sW4" target="_blank" style="color:#ef6c00;">[팟캐스트] System Security 👈 VS 유연희</a></li>
-              <li>👨‍💼 <a href="https://youtu.be/hncs5YLDTHU" target="_blank" style="color:#ef6c00;">Agent AI - AI가 이제 팀장이 된다고? 👈 오형신</a></li>
-            </ul> <br><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2193929410" target="_blank" class="btn" style="display:inline-block; background:#ffcc80; color:#ef6c00; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">📺 전체 콘텐츠 보기</a> 
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>  
-
-<!-- Fast Learner 섹션 -->
-<table style="width:100%; background:#f3e5f5; max-width:1000px; margin:auto;">
-  <tr>
-    <td class="section" style="padding: 0 0;">
-      <table style="width:100%; border-left:5px solid #9c27b0; text-align:left;">
-        <tr>
-          <td class="card">
-            <h3 style="color:#7b1fa2;">🏆 Fast Learner 랭킹 1위! VS사업본부 최.진.석! </h3>
-            <p style="font-size:13px;">  2분기 종료 10일 전,Fast Learner들을 확인해보세요!</p>
-            <br><a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2966064616" target="_blank" class="btn" style="display:inline-block; background:#e1bee7; color:#7b1fa2; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">🏅 Fast Learner 보기</a>
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table> 
-
-  <dir></dir>
-  <!-- 이벤트 섹션 -->
-<table style="width:100%; background:#fffde7; max-width:1000px; margin:auto;">
-  <tr>
-    <td class="section" style="padding: 0 0;">
-      <table style="width:100%; border-left:5px solid #fbc02d; text-align:left;">
-        <tr>
-          <td class="card">
-            <h3 style="color:#f9a825;">🎁 7월 쏘칼 이벤트</h3>
-            <p style="font-size:13px;">“이건 무조건 코스워크!” 제안하면 경품까지!</p>
-            <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3199994649" target="_blank" class="btn" style="display:inline-block; background:#fbc02d; color:white; padding:6px 12px; border-radius:4px; text-decoration:none; font-size:13px;">🎁 이벤트 참여하기</a>
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>  
-
-<!-- 푸터 섹션 -->
-<table style="width:100%; background:#eceff1; max-width:1000px; margin:auto;">
-  <tr>
-    <td class="section" style="padding: 10px 16px;">
-      <p style="font-size:12px; color:#555; margin:0; align=center">
-        문의 : 교육서비스센터 유지혜 선임 ｜ 발행 : SW역량강화팀 ｜ 제작 : 이은아, 진명숙, 이호정, 유지혜, 장서련
-      </p>
-    </td>
-  </tr>
-</table>  
 
 </body>
 </html>
-
-
 
 
