--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
 
   <!-- PMC 참가자 모집 -->
   <div class="card">
-    <h3>🎙️ PMC 참가자를 모집합니다!</h3>
-    <p>🎃 재밌는 방 탈출 예선에서 살아남은 팀만 본선에 출전!…참가자 전원에게 특전🎁</p>
-    <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=0987654321" target="_blank">
+    <h3>🎙️LG SW PM Competiton 2025 참가자를 모집합니다!</h3>
+    <p>🎃 대폭 개편! 재밌는 방 탈출 예선에서 살아남은 팀만 본선에 출전!…참가자 전원에게 특전🎁</p>
+    <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3238104795" target="_blank">
       <img src="https://pingjueuna.github.io/socalletter/swpm.png" alt="PMC 참가자 모집" style="width:100%; border-radius:6px; margin-top:10px;">
     </a>
   </div>
