--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <!-- LG SDC 발표자 모집 -->
   <div class="card">
     <h3>🎙️LG SDC 발표자를 모집합니다!</h3>
-    <p>LG를 대표하는 무대는 준비되어 있습니다. 여러분의 아이디어와 기술을 공유할 기회를 잡으세요.</p>
+    <p>LG를 대표하는 무대는 준비되어 있습니다. 여러분의 아이디어와 기술을 공유할 기회를 잡으세요!</p>
     <a href="https://lgsdc.com" target="_blank">
       <img src="https://pingjueuna.github.io/socalletter/lgsdc.png" alt="LG SDC 발표자 모집" style="width:100%; border-radius:6px; margin-top:10px;">
     </a>
