--- a/20250813/index.html
+++ b/20250813/index.html
@@ -3,29 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>SW College Letter VOL.21</title>
-  <style>
+ <style>
   body {
     font-family: 'Segoe UI', sans-serif;
     margin: 0;
     padding: 0;
-    background: #e5e7eb; /* 흐린 하늘색+회색 톤 */
+    background: #fdf2f2; /* 옅은 핑크 베이지 */
     color: #111827;
   }
   .container {
     max-width: 900px;
     margin: 40px auto;
     padding: 20px;
-    background: #f8fafc;
-    border: 1px solid #cbd5e1;
+    background: #fffafa; /* 부드러운 크림 화이트 */
+    border: 1px solid #fbcfe8; /* 연한 로즈핑크 */
     border-radius: 12px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.04);
   }
   .card {
     padding: 20px;
-    background: #f1f5f9; /* 흐린 하늘빛 그레이 */
+    background: #fff1f2; /* 옅은 로즈핑크 배경 */
     border-radius: 10px;
-    border: 1px solid #94a3b8; /* 블루그레이 테두리 */
-    box-shadow: 0 4px 12px rgba(148, 163, 184, 0.3); /* 블루그레이 그림자 */
+    border: 1px solid #fda4af; /* 브릭·로즈톤 테두리 */
+    box-shadow: 0 4px 12px rgba(248, 113, 113, 0.3); /* 부드러운 레드 그림자 */
     margin-bottom: 20px;
   }
   .btn {
@@ -35,7 +35,7 @@
     font-size: 14px;
     font-weight: 600;
     text-decoration: none;
-    background: #475569; /* 차분한 딥 블루그레이 */
+    background: #b91c1c; /* 와인 레드 */
     color: #ffffff;
   }
   h2, h3 {
@@ -46,7 +46,7 @@
   }
   h4 {
     font-size: 15px;
-    color: #1e293b;
+    color: #7f1d1d; /* 깊은 브릭 레드 */
     margin-top: 10px;
   }
   p, ul {
@@ -67,15 +67,15 @@
   }
   .vol-info {
     text-align: right;
-    color: #334155; /* 어두운 블루그레이 */
+    color: #be123c; /* 진한 로즈레드 */
     font-weight: bold;
   }
   .highlight {
-    color: #1e3a8a; /* 깊은 네이비 블루 */
+    color: #9f1239; /* 딥 레드 포인트 */
   }
   .footer {
     font-size: 12px;
-    color: #64748b;
+    color: #9f1239;
     text-align: center;
     margin-top: 40px;
   }
