--- a/20250813/index.html
+++ b/20250813/index.html
@@ -161,14 +161,14 @@
 
   <!-- 이벤트 -->
   <div class="card">
-    <h3>🎁 7월 이벤트 당첨자 발표</h3>
-    <p>참여해주신 모든 분들께 감사드립니다! 당첨자는 아래에서 확인하세요.</p>
-    <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3199994649" class="btn" target="_blank">🎁 당첨자 확인하기</a>
+    <h3>🎁쏘칼 8월 속닥속닥🤫 이벤트 </h3>
+    <p>쏘칼 유데미 코스워크에 대해 동료에게 들었던 놀라운 한마디를 들려주세요!<br>긍정이든 부정이든 모두 OK, 여러분의 생생한 이야기를 기다립니다.</p>
+    <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3199994649" class="btn" target="_blank">🎁8월 이벤트 참여하</a>
   </div>
 
   <!-- 푸터 -->
-  <div class="footer">
-    문의: 교육서비스센터 유지혜 선임 ｜ 발행: SW역량강화팀 ｜ 제작: 이은아, 진명숙, 이호정, 유지혜, 장서련
+  <div class="footer"> 
+    <p color:#ffffff;">문의: 교육서비스센터 유지혜 선임 ｜ 발행: SW역량강화팀 ｜ 제작: 이은아, 진명숙, 이호정, 유지혜, 장서련 </p>
   </div>
 
 </div>
