--- a/20250813/index.html
+++ b/20250813/index.html
@@ -163,7 +163,7 @@
   <div class="card">
     <h3>🎁쏘칼 8월 속닥속닥🤫 이벤트 </h3>
     <p>쏘칼 유데미 코스워크에 대해 동료에게 들었던 놀라운 한마디를 들려주세요!<br>긍정이든 부정이든 모두 OK, 여러분의 생생한 이야기를 기다립니다.</p>
-    <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3199994649" class="btn" target="_blank">🎁8월 이벤트 참여하</a>
+    <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3256455984" class="btn" target="_blank">🎁8월 이벤트 참여하기 </a>
   </div>
 
   <!-- 푸터 -->
