--- a/20250813/index.html
+++ b/20250813/index.html
@@ -115,27 +115,14 @@
 
   <!-- 러크TV -->
   <div class="card">
-    <h3>📺 러크TV | 최신 마이크로 콘텐츠</h3>
+    <h3>📺 러크TV | LG전자 임직원들이 만드는 "우리 모두의 경험과 노하우" </h3>
     <ul style="font-size:13px; line-height:1.8;">
       <!-- 리스트 항목 그대로 붙여넣기 -->
-       <li>🧡 <a href="http://collab.lge.com/main/x/90xow" target="_blank" style="color:#ef6c00;">[LG.AI] Talk Concert 2025 - Shaping the Future of AI 👈 CSO 정의석</a></li>
-              <li>🧡 <a href="http://collab.lge.com/main/x/yVVGw" target="_blank" style="color:#ef6c00;"> An Efficient Statistical Method for Image Noise Level Estimation 👈 CSO 정의석</a></li>
-              <li>🧡 <a href="http://collab.lge.com/main/x/N1ZGw" target="_blank" style="color:#ef6c00;">[Anthropic] 언제 프롬프트 엔지니어링을 활용해야 할까? 👈 CSO 정의석</a></li>
-              <li>🧡 <a href="http://collab.lge.com/main/x/c1ZGw" target="_blank" style="color:#ef6c00;">[Anthropic] Claude Prompt Engineering 완벽 가이드 👈 CSO 정의석</a></li>
-              <li>🧡 <a href="http://collab.lge.com/main/x/e0TAw" target="_blank" style="color:#ef6c00;">(25.07.29) ChatGPT Study Mode 기능 출시👈 CSO 정의석</a></li>
-              <li>🧡<a href="http://collab.lge.com/main/x/--4BwQ" target="_blank" style="color:#ef6c00;">(25.08.01) 엔트로픽에서 바라보는 바이브코딩이란? 👈 CSO 정의석</a></li>
-              <li>🧡 <a href="http://collab.lge.com/main/x/K2rAw" target="_blank" style="color:#ef6c00;">(설치) OLLAMA가 채팅 앱을 지원합니다..! 👈  CSO 정의석</a></li>
-               <li>🧡 <a href="https://youtu.be/0nGEd85MDNA" target="_blank" style="color:#ef6c00;">[최신역량인증시험 기출 뽀개기][문제해결2] 이물질 제거 👈 HS 김준형 </a></li>
-              <li>🧡 <a href="https://youtu.be/ekIsvSMzK_k" target="_blank" style="color:#ef6c00;"> [최신역량인증시험 기출 뽀개기][코드 이해] 시계 방향 회전 👈 HS 김준형</a></li>
-              <li>🧡 <a href="https://youtu.be/mkeGwJ8l5uw" target="_blank" style="color:#ef6c00;">[최신역량인증시험 기출 뽀개기][문제 해결1] 화학합성 👈 HS 김준형</a></li>
-              <li>🧡 <a href="https://youtu.be/CfgJTnAH8qE" target="_blank" style="color:#ef6c00;">[최신역량인증시험 기출 뽀개기][문제해결2] 영역 나누기 👈 HS 김준형</a></li>
-              <li>🧡 <a href="http://collab.lge.com/main/x/WTZ8w" target="_blank" style="color:#ef6c00;">EP3-4_노코드 플랫폼 활용👈 CSO 오형신</a></li>
-              <li>🧡 <a href="https://youtu.be/IgF7uA8xGpk" target="_blank" style="color:#ef6c00;">EP1-5_"구글도 인정한 예측 기본기의 힘" |시계열 예측 3총사| 👈 CSO 오형신</a></li>
-              <li>🧡 <a href="http://collab.lge.com/main/x/fTd8w" target="_blank" style="color:#ef6c00;">EP3-5_생성형 AI 실전 업무 적용 사례👈  CSO 오형신</a></li>
-              <li>🧡 <a href="https://youtu.be/ME9KJtkVJHY" target="_blank" style="color:#ef6c00;">Ep18-5. [부록4] OBJ modeling data 직!접! 수정하기 👈 CTO 손진호</a></li>
-              <li>🧡 <a href="https://youtu.be/sLLexNYk9Kg" target="_blank" style="color:#ef6c00;">Decision Tree를 PyQt5에서 구현하기👈 CSO 이명희</a></li>
-              <li>🧡 <a href="https://youtu.be/Km0wLxJ6u9o" target="_blank" style="color:#ef6c00;">pyqt5 DecisiontreeClassifier save model👈 CSO 이명희</a></li>
-              <li>🧡 <a href="https://youtu.be/8yMi76aaqgE" target="_blank" style="color:#ef6c00;">pyqt5 DecisiontreeClassifier inference 👈  CSO 이명희</a></li>
+       <li>🧡 <a href="http://collab.lge.com/main/x/UjXzvw" target="_blank" style="color:#ef6c00;">OpenGL ES 2.0 Ep.18. [부록4] 잘못된 텍스쳐 좌표 수정하기 - 직접 수정하자. 👈 CTO 손진호</a></li>
+              <li>🧡 <a href="http://collab.lge.com/main/x/khpSwQ" target="_blank" style="color:#ef6c00;">(꿀팁 전수) Collab 이동 식 Moving Table of Contents(TOC) 만들기 👈 CSO 정의석</a></li>
+              <li>🧡 <a href="http://collab.lge.com/main/x/Bta8wQ" target="_blank" style="color:#ef6c00;">AI/TECH 뉴스(25.08.08) GPT-5 공개, 박사급 전문가가 주머니 속에 들어오다! 👈 CSO 정의석</a></li>
+              <li>🧡 <a href="http://collab.lge.com/main/x/yZDtwQ" target="_blank" style="color:#ef6c00;">AI/TECH 뉴스(25.08.10) GPT-5 Prompting Guide 👈 CSO 정의석</a></li>
+              <li>🧡 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3204810946" target="_blank" style="color:#ef6c00;">내 PC에서 챗봇 구축하기: EP4-3. 내 컴퓨터에 LLM 데려오기 👈 HS 박대근</a></li>
     </ul>
     </ul>
     <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2193929410" class="btn" style="background:#ef6c00;" target="_blank">📺 전체 콘텐츠 보기</a>
