--- a/20250813/index.html
+++ b/20250813/index.html
@@ -105,12 +105,12 @@
     </div>
   </div>
 
-  <!-- NEW 코스워크 -->
+  <!-- 3분기 코스워크 -->
   <div class="card">
-    <h3>🔥 NEW! 3분기 코스워크 OPEN</h3>
-    <p>AI, 프롬프트, Embedded까지! 이번 분기는 꼭 챙겨야 할 핵심 역량으로 구성했어요.</p>
-    <h4>지금 바로 신청하세요! 코스워크 정보는 링크 클릭! <br>( 3분기 학습 기간 : 8/12~10/31 )</h4>
-    <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2878865316" class="btn" target="_blank">✏️ 코스워크 전체보기</a>
+    <h3> 🥇2분기 쏘칼 우수학습자 발표 & 3분기 학습 시작 </h3>
+    <p>2025년 2분기 쏘칼 우수학습자는 총 949명입니다.(와우~ 👏) Lv1(10시간 이상 학습) 373명, Lv2(20시간) 300명, Lv3(30시간) 167명, Lv4(40시간) 54명, Lv5(50시간) 55명이 이름을 올렸습니다. <br> 본부별로는 CTO부문 261명, MS본부가 244명으로 가장 많은 우수학습자를 배출했으며, HS본부 203명, VS본부 142명, ES본부 48명, CSO 23명이 뒤를 이었습니다. <br> 우수학습자분들을 위해 8월에는 🌐『쏘칼 프리미엄 인사이트:바이브 코딩』를 특별히 준비했습니다.(개별 안내) <br> 
+    현재 3분기 학습이 시작되었으며, 더욱 새롭고 즐거운 학습 여정을 안내해 드릴 예정입니다. 3분기(8/12~10/31)도 함께 성장하며 멋진 기록을 만들어 가시길 응원합니다!</p>
+    <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2966064616" class="btn" target="_blank">🏆 우수학습자 명예의 전당 보기</a>
   </div>
 
   <!-- 러크TV -->
@@ -140,7 +140,7 @@
   <!-- LG SDC 발표자 모집 -->
   <div class="card">
     <h3>🎙️LG SDC 발표자를 모집합니다!</h3>
-    <p>LG를 대표하는 무대는 준비되어 있습니다. 여러분의 아이디어와 기술을 공유할 기회를 잡으세요!</p>
+    <p>당신의 아이디어와 기술을 LG를 대표하는 무대 위에서 빛내세요 — 발표자 전원, 15만원 와인🍷+감사패📜 증정!</p>
     <a href="https://lgsdc.com" target="_blank">
       <img src="https://pingjueuna.github.io/socalletter/lgsdc.png" alt="LG SDC 발표자 모집" style="width:100%; border-radius:6px; margin-top:10px;">
     </a>
