--- a/20250813/index.html
+++ b/20250813/index.html
@@ -106,13 +106,37 @@
   </div>
 
   <!-- 3분기 코스워크 -->
-  <div class="card">
-    <h3> 🥇2분기 쏘칼 우수학습자 발표 & 3분기 학습 시작 </h3>
-    <h4></h4><p>2025년 2분기 쏘칼 우수학습자는 총 949명입니다.(와우~ 👏) <br>Lv1(10시간 이상 학습) 373명, Lv2(20시간) 300명, Lv3(30시간) 167명, Lv4(40시간) 54명, Lv5(50시간) 55명이 이름을 올렸습니다. <br> 본부별로는 CTO부문 261명, MS본부가 244명으로 가장 많은 우수학습자를 배출했으며, HS본부 203명, VS본부 142명, ES본부 48명, CSO 23명이 뒤를 이었습니다. <br> 우수학습자분들을 위해 8월에는 🌐『쏘칼 프리미엄 인사이트:바이브 코딩』를 특별히 준비했습니다.</h4> <br> 
-    현재 3분기 학습이 시작되었으며, 더욱 새롭고 즐거운 학습 여정을 안내해 드릴 예정입니다. 3분기(8/12~10/31)도 함께 성장하며 멋진 기록을 만들어 가시길 응원합니다!</p>
-    <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2966064616" class="btn" target="_blank">🏆 우수학습자 명예의 전당 보기</a>
-  </div>
+  //<div class="card">
+  //  <h3> 🥇2분기 쏘칼 우수학습자 발표 & 3분기 학습 시작 </h3>
+ //   <h4></h4><p>2025년 2분기 쏘칼 우수학습자는 총 949명입니다.(와우~ 👏) <br>Lv1(10시간 이상 학습) 373명, Lv2(20시간) 300명, Lv3(30시간) 167명, Lv4(40시간) 54명, Lv5(50시간) 55명이 이름을 올렸습니다. <br> 본부별로는 CTO부문 261명, MS본부가 244명으로 가장 많은 우수학습자를 배출했으며, HS본부 203명, VS본부 142명, ES본부 48명, CSO 23명이 뒤를 이었습니다. <br> 우수학습자분들을 위해 8월에는 🌐『쏘칼 프리미엄 인사이트:바이브 코딩』를 특별히 준비했습니다.</h4> <br> 
+   // 현재 3분기 학습이 시작되었으며, 더욱 새롭고 즐거운 학습 여정을 안내해 드릴 예정입니다. 3분기(8/12~10/31)도 함께 성장하며 멋진 기록을 만들어 가시길 응원합니다!</p>
+  //  <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2966064616" class="btn" target="_blank">🏆 우수학습자 명예의 전당 보기</a>
+ // </div>
 
+<!-- 3분기 코스워크 -->
+<div class="card">
+  <h3>🥇 2분기 쏘칼 우수학습자 발표 & 3분기 학습 시작</h3>
+  <p>
+    2025년 2분기 쏘칼 우수학습자는 총 <strong>949명</strong>입니다 👏<br>
+    Lv1(10시간 이상) <strong>373명</strong>, Lv2(20시간) <strong>300명</strong>, Lv3(30시간) <strong>167명</strong>, 
+    Lv4(40시간) <strong>54명</strong>, Lv5(50시간) <strong>55명</strong>이 이름을 올렸습니다.
+  </p>
+  <p>
+    본부별로는 CTO부문 <strong>261명</strong>, MS본부 <strong>244명</strong>, HS본부 <strong>203명</strong>, 
+    VS본부 <strong>142명</strong>, ES본부 <strong>48명</strong>, CSO <strong>23명</strong> 순이었습니다.
+  </p>
+  <p>
+    우수학습자분들을 위해 8월에는 🌐 <strong>『쏘칼 프리미엄 인사이트: 바이브 코딩』</strong>을 특별히 준비했습니다.
+  </p>
+  <p>
+    현재 3분기 학습(8/12~10/31)이 시작되었으며, 더욱 새롭고 즐거운 학습 여정을 안내해 드릴 예정입니다.<br>
+    함께 성장하며 멋진 기록을 만들어 가시길 응원합니다!
+  </p>
+  <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2966064616" 
+     class="btn" target="_blank">🏆 우수학습자 명예의 전당 보기</a>
+</div>
+
+  
   <!-- 러크TV -->
   <div class="card">
     <h3>📺 러크TV | LG전자 임직원들이 만드는 "우리 모두의 경험과 노하우" </h3>
