--- a/20250813/index.html
+++ b/20250813/index.html
@@ -111,7 +111,7 @@
   <p>
     2025년 2분기 쏘칼 우수학습자는 총 <strong>949명</strong>입니다 👏<br>
     Lv1(10시간 이상) <strong>373명</strong>, Lv2(20시간) <strong>300명</strong>, Lv3(30시간) <strong>167명</strong>, 
-    Lv4(40시간) <strong>54명</strong>, Lv5(50시간) <strong>55명</strong>이 이름을 올렸습니다.
+    Lv4(40시간) <strong>54명</strong>, Lv5(50시간) <strong>55명</strong>이 이름을 올렸습니다. 열심히 학습 하신 분들께 박수를 보냅니다!
   </p>
   <p>
     본부별로는 CTO부문 <strong>261명</strong>, MS본부 <strong>244명</strong>, HS본부 <strong>203명</strong>, 
