--- a/20250820/index.html
+++ b/20250820/index.html
@@ -41,10 +41,12 @@
       padding: 0 20px;
     }
     .card {
-      padding: 20px;
-      background: #ffffff;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+  padding: 20px;
+  background: #f3e8ff; /* 연보라색 배경 */
+  border-radius: 12px;
+  border: 1px solid #e0d7f7; /* 연보라색 톤의 테두리 */
+  box-shadow: 0 2px 6px rgba(0,0,0,0.04);
+  margin-bottom: 20px; /* 카드 간 간격 */
     }
     .btn {
       display: inline-block;
