--- a/20250820/index.html
+++ b/20250820/index.html
@@ -77,7 +77,7 @@
   <!-- 라코 섹션 -->
 <table style="width:100%; background:#e6f4ea; max-width:800px; margin:0 0 20px 0;">
   <tr>
-    <td class="section" style="padding: 0 0;">
+    <td class="section" style="padding: 20px  0;">
       <table style="width:100%; border-left:5px solid #34a853; text-align:left;">
         <tr>
           <td class="card">
@@ -111,7 +111,7 @@
 <!-- 러크TV 섹션 -->
 <table style="width:100%; background:#fff3e0; max-width:800px; margin:0 0 20px 0;">
   <tr>
-    <td class="section" style="padding: 0 0;">
+    <td class="section" style="padding: 20px  0;">
       <table style="width:100%; border-left:5px solid #ff9800; text-align:left;">
         <tr>
           <td class="card">
@@ -132,7 +132,7 @@
   <!-- LG SDC 발표자 모집 -->
 <table style="width:100%; background:#fce4ec; max-width:800px; margin:0 0 20px 0;">
   <tr>
-    <td class="section" style="padding: 0 0;">
+    <td class="section" style="padding: 20px  0;">
       <table style="width:100%; border-left:5px solid #ec407a; text-align:left;">
         <tr>
           <td class="card" style="vertical-align:top; width:60%;">
@@ -151,7 +151,7 @@
 <!-- 이벤트 -->
 <table style="width:100%; background:#f3e5f5; max-width:800px; margin:0 0 20px 0;">
   <tr>
-    <td class="section" style="padding: 0 0;">
+    <td class="section" style="padding: 20px  0;">
       <table style="width:100%; border-left:5px solid #9c27b0; text-align:left;">
         <tr>
           <td class="card">
@@ -169,7 +169,7 @@
 <!-- 푸터섹션 -->
 <table style="width:100%; background:#eceff1; max-width:800px; margin:0 0 20px 0;">
   <tr>
-    <td class="section" style="padding: 10px 16px;">
+    <td class="section" style="padding: 20px 16px;">
       <p style="font-size:12px; color:#555; margin:0; align=center">
         문의 : 교육서비스센터 유지혜 선임 ｜ 발행 : SW역량강화팀 ｜ 제작 : 이은아, 진명숙, 이호정, 유지혜, 장서련
       </p>
